# kartchain

./: .dockerignore  .env.example  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  LICENSE  README.md  RUN.md  package.json  pnpm-lock.yaml  render.yaml
.github/workflows/: ci.yml
assets-import/: .gitignore  README.md  STK-FORMAT-NOTES.md  convert-models.ps1  convert_spm.py  fetch-stk-assets.ps1  gen-attribution.ps1  import-stk-catalog.mjs  reconvert-tracks.ps1  stage-shared-textures.ps1
client/: ATTRIBUTION.md  README.md  export_presets.cfg  icon.svg.import  project.godot
client/assets/: home_bg.png.import  lobby_bg.png.import  menu_music.mp3.import  mode_menu_bg.png.import
client/karts/: _catalog.json
client/music/: Boom_boom_boom.ogg.import  Lava.ogg.import  Penguin_Party.ogg.import  SkyVibe-HighFrequency.ogg.import  Snowy.ogg.import  West.ogg.import  alien_signal.ogg.import  bay.ogg.import  celtic.ogg.import  celtic_fast.ogg.import  cocoa_river.ogg.import  cocoa_river_fast.ogg.import  demonhill.ogg.import  egypt.ogg.import  farm.ogg.import  farm_f.ogg.import  garden.ogg.import  hacienda.ogg.import  jumping_to_the_stars_remake.ogg.import  jumping_to_the_stars_remake_fast.ogg.import  kart_grand_prix.ogg.import  klabauter_dance.ogg.import  landing_in_gran_paradiso.ogg.import  landing_in_gran_paradiso_fast.ogg.import  las_dunas.ogg.import  lose_theme.ogg.import  menutheme.ogg.import  overworld.ogg.import  race_summary.ogg.import  race_win_theme.ogg.import  subsea.ogg.import  (+8 more)
docs/: ARCHITECTURE.md  LICENSING.md  NETWORKING.md  QUICKSTART.md  SOLANA.md
scripts/: render-build.sh
server/: .dockerignore  Dockerfile  README.md  package.json  tsconfig.json  vitest.config.ts
sim/: Cargo.toml
sim/src/: lib.rs  math.rs
sim/tests/: determinism.rs
web/: .env.example  README.md  next.config.mjs  package.json  vercel.json
(+4450 files in other folders)
